--- a/index.html
+++ b/index.html
@@ -72,14 +72,12 @@
               <div class="flex h-full items-center justify-center">
                 <div class="text-white">
                   <h2 class="mb-4 text-4xl font-semibold">Chafik TELLI</h2>
-                  <h4 class="mb-6 text-xl font-semibold">Je suis un développeur web junior. J'ai acquis pleins de compétences notamment en HTML et CSS. Mon objectif est de devenir un développeur professionnel et d'en faire une carrière</h4>
+                  <h4 class="mb-6 ml-12 mr-12 text-xl font-semibold">Je suis un développeur web junior. J'ai acquis pleins de compétences notamment en HTML et CSS. Mon objectif est de devenir un développeur professionnel et d'en faire une carrière</h4>
                   <button
                     type="button"
                     class="inline-block rounded border-2 border-neutral-50 px-6 pb-[6px] pt-2 text-xs font-medium uppercase leading-normal text-neutral-50 transition duration-150 ease-in-out hover:border-neutral-300 hover:text-neutral-200 focus:border-neutral-300 focus:text-neutral-200 focus:outline-none focus:ring-0 active:border-neutral-300 active:text-neutral-200 dark:hover:bg-neutral-600 dark:focus:bg-neutral-600"
                     data-twe-ripple-init
-                    data-twe-ripple-color="light">
-                    Check my Resume
-                  </button>
+                    data-twe-ripple-color="light">Mon CV</button>
                 </div>
               </div>
             </div>
@@ -140,11 +138,11 @@
                 src=".\Assets\landingtravel.png"
                 alt="Landing Travel" />
             </a>
-            <div class="p-6 text-surface content-center">
-              <h5 class="mb-2 text-xl font-medium leading-tight">Travel Agency</h5>
+            <div class="p-16 text-surface content-center">
+              <h5 class="mb-2 text-xl font-medium leading-tight">Agence de Voyage</h5>
               <p class="mb-4 text-base">
                 Voici un des tout premiers projets que j'ai réalisé. 
-                Il s'agit d'une landing page d'une agence de voyage, que j'ai nommé Landing Travel.
+                Il s'agit d'une page d'atterissage pour une agence de voyage.
               </p>
             </div>
           </div>
